--- a/desafio3.1/public/style.css
+++ b/desafio3.1/public/style.css
@@ -222,3 +222,19 @@ iframe {
     position: absolute;
     top: 5%;
 }
+
+
+
+/* === Erro 404 === */
+
+#conteudo .erro {
+    background-color: var(--cor-verde);
+    padding: 20px 20px;
+    border-radius: 20px;
+}
+
+#conteudo .erro a {
+    color: black;
+    text-decoration: none;
+}
+
