--- a/public/style.css
+++ b/public/style.css
@@ -94,6 +94,7 @@ header {
 .card {
     background-color: var(--color-rocket);
     cursor: pointer;
+    display: grid;
 }
 
 .card_image-container img {
@@ -108,6 +109,7 @@ header {
 .card_info {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
 .card_price {
