--- a/views/about.njk
+++ b/views/about.njk
@@ -1,24 +1,26 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-<title>Sobre - Luis Fernando</title>
-<link rel="stylesheet" href="/style.css">
+    <title>Sobre - Luis Fernando</title>
+    <link rel="stylesheet" href="/style.css">
 {% endblock %}
 
 {% block content %}
 
-<div id="wrapper">
-    <img src="https://avatars2.githubusercontent.com/u/28775702?s=460&u=a097a006f8315a5db800da9e06e17bc45bfeb6d5&v=4"
-        alt="Luis Fernando">
-    <h1>Luis Dev</h1>
-    <h2>Aluno - Rocketseat</h2>
-    <p>Estudante que em breve se tornara um grande desenvolvedor.</p>
-</div>
+    <div id="wrapper">
+        <img src="{{about.avatar_url}}"
+        alt="Imagem de {{about.name}}">
+        <h1>{{about.name}}</h1>
+        <h2>{{about.role}}</h2>
+        <p>{{about.description}}</p>
+    </div>
 
-<div class="links" id="links-footer">
-    <a href="https://github.com/LuisFernandoDeveloper" target="_blank">Github</a>
-    <a href="/" target="_blank">Twitter</a>
-    <a href="/" target="_blank">Linkedin</a>
-</div>
+    <div class="links" id="links-footer">
+        {%for link in about.links%}
 
-{% endblock %}
+            <a href="{{link.url}}" target="_blank">{{link.name}}</a>
+
+        {%endfor%}
+    </div>
+
+    {% endblock %}
