--- a/desafio3.2/views/layout.njk
+++ b/desafio3.2/views/layout.njk
@@ -5,7 +5,7 @@
 
         {% block head %}
 
-            <title>Desafio 3-1</title>
+            <title>Desafio 3-2</title>
 
         {% endblock %}
 
@@ -25,6 +25,12 @@
         </header>
 
         {% block content %}{% endblock %}
+
+        <div id="links-footer" class="links">
+            <a href="/">GitHub</a>
+            <a href="/">Instagram</a>
+            <a href="/">Facebook</a>
+        </div>
 
     </body>
 </html>
