--- a/public/style.css
+++ b/public/style.css
@@ -183,3 +183,15 @@ iframe {
     margin: 0 auto;
     max-width: 80%;
 }
+
+.card_video-container {
+    position: relative;
+    padding-top: 62.5%;
+}
+
+.card_video-container iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
