--- a/public/style.css
+++ b/public/style.css
@@ -181,7 +181,8 @@ iframe {
 
 .video {
     margin: 0 auto;
-    max-width: 80%;
+    max-width: 60%;
+    padding-bottom: 50px;
 }
 
 .card_video-container {
